#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME utils)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES
    cleanupmanager.cpp
    cryptohelper.cpp
    exception.cpp
    filesystem.cpp
    fsplatform.cpp
    fswatcher.cpp
    grpchelper.cpp
    image.cpp
    json.cpp
    parser.cpp
    pk11uri.cpp
    pkcs11helper.cpp
    retry.cpp
    time.cpp
    utils.cpp
)

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES aos::core::common::crypto aos::core::common::tools aos::api::iam Poco::Foundation Poco::JSON gRPC::grpc++)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    SOURCES
    ${SOURCES}
    INCLUDES
    ${INCLUDES}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
